// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-93s6qb"
  >
    Test
  </div>
</div>
`;

exports[`Text component should match snapshot with default props 1`] = `
<div>
  <div
    class="css-33lc35"
  >
    test
  </div>
</div>
`;
